# sl-studio

./: .gitignore  .prettierignore  .tool-versions  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PERFORMANCE_REPORT.md  README.md  SPEC.md  eslint.config.js  mise.toml  package-lock.json  package.json  playwright.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  (+2 more)
docs/: README.md  project-overview.md
e2e/: backup.test.ts  compare.test.ts  dashboard.test.ts  export.test.ts  navigation.test.ts  settings.test.ts
playwright-report/: index.html
scripts/: ci_run_all.sh  cleanup_release.sh  install_deps.sh
src-tauri/: Cargo.toml  Cargo.toml.bak  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/benches/: database_bench.rs
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: mod.rs  model.rs  project.rs  settings.rs
src-tauri/src/core/: database.rs  mod.rs  registry.rs
src-tauri/src/extractors/: audio.rs  deconstructor.rs  document.rs  mod.rs  ocr.rs  pdf.rs
src-tauri/src/gpu/: backend.rs  detect.rs  mod.rs
src-tauri/src/inference/: llama.rs  mod.rs  pipeline.rs  reasoner.rs
src-tauri/src/inference/prompts/: basic_facts.txt  financial_entities.txt  financial_patterns.txt
src-tauri/src/inference/quality/: deduplication.rs  mod.rs  scoring.rs
src-tauri/src/inference/schemas/: entities.json  facts.json  patterns.json
src-tauri/src/models/: mod.rs
src-tauri/src/utils/: files.rs  logging.rs  mod.rs  paths.rs
src-tauri/tests/: config_test.rs  database_test.rs  extractors_test.rs  hardware_test.rs  inference_test.rs  integration_test.rs  project_test.rs
test-results/: .last-run.json
(+53 files in other folders)
